--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,131 +13,131 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <!--<android.support.v7.widget.CardView-->
-                <!--app:cardElevation="4dp"-->
-                <!--android:layout_marginLeft="@dimen/spacing_small"-->
-                <!--android:layout_marginRight="@dimen/spacing_small"-->
-                <!--android:layout_marginTop="@dimen/spacing_small"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content">-->
+        <android.support.v7.widget.CardView
+                app:cardElevation="4dp"
+                android:layout_marginLeft="@dimen/spacing_small"
+                android:layout_marginRight="@dimen/spacing_small"
+                android:layout_marginTop="@dimen/spacing_small"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <!--<LinearLayout-->
-                    <!--android:padding="@dimen/spacing_normal"-->
-                    <!--android:orientation="vertical"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content">-->
-                <!--<android.support.design.widget.TextInputLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content">-->
+            <LinearLayout
+                    android:padding="@dimen/spacing_normal"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                    <!--<android.support.design.widget.TextInputEditText-->
-                            <!--android:id="@+id/et_name"-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:hint="@string/form_name"-->
-                            <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>-->
+                    <android.support.design.widget.TextInputEditText
+                            android:id="@+id/et_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/form_name"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
-                <!--</android.support.design.widget.TextInputLayout>-->
+                </android.support.design.widget.TextInputLayout>
 
-                <!--<android.support.design.widget.TextInputLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content">-->
+                <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                    <!--<android.support.design.widget.TextInputEditText-->
-                            <!--android:id="@+id/et_recipient_name"-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:hint="@string/form_recipient_name"-->
-                            <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>-->
+                    <android.support.design.widget.TextInputEditText
+                            android:id="@+id/et_recipient_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/form_recipient_name"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
-                <!--</android.support.design.widget.TextInputLayout>-->
+                </android.support.design.widget.TextInputLayout>
 
-            <!--</LinearLayout>-->
+            </LinearLayout>
 
-        <!--</android.support.v7.widget.CardView>-->
+        </android.support.v7.widget.CardView>
 
-        <!--<android.support.v7.widget.CardView-->
-                <!--app:cardElevation="4dp"-->
-                <!--android:layout_margin="@dimen/spacing_small"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content">-->
+        <android.support.v7.widget.CardView
+                app:cardElevation="4dp"
+                android:layout_margin="@dimen/spacing_small"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <!--<LinearLayout-->
-                    <!--android:padding="@dimen/spacing_normal"-->
-                    <!--android:orientation="vertical"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content">-->
-                <!--<android.support.design.widget.TextInputLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content">-->
+            <LinearLayout
+                    android:padding="@dimen/spacing_normal"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                    <!--<android.support.design.widget.TextInputEditText-->
-                            <!--android:id="@+id/et_address"-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:hint="@string/form_address"-->
-                            <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>-->
+                    <android.support.design.widget.TextInputEditText
+                            android:id="@+id/et_address"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/form_address"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
-                <!--</android.support.design.widget.TextInputLayout>-->
+                </android.support.design.widget.TextInputLayout>
 
-                <!--<android.support.design.widget.TextInputLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content">-->
+                <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                    <!--<AutoCompleteTextView-->
-                            <!--android:id="@+id/autocomplete_country"-->
-                            <!--android:hint="@string/form_city"-->
-                            <!--android:layout_width="fill_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>-->
+                    <AutoCompleteTextView
+                            android:id="@+id/autocomplete_country"
+                            android:hint="@string/form_city"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
-                    <!--&lt;!&ndash;<android.support.design.widget.TextInputEditText-->
-                            <!--android:id="@+id/et_city"-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:hint="@string/form_city"-->
-                            <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>&ndash;&gt;-->
+                    <!--<android.support.design.widget.TextInputEditText
+                            android:id="@+id/et_city"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/form_city"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>-->
 
-                <!--</android.support.design.widget.TextInputLayout>-->
+                </android.support.design.widget.TextInputLayout>
 
-                <!--<android.support.design.widget.TextInputLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content">-->
+                <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                    <!--<android.support.design.widget.TextInputEditText-->
-                            <!--android:id="@+id/et_postal_code"-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:hint="@string/form_postal_code"-->
-                            <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>-->
+                    <android.support.design.widget.TextInputEditText
+                            android:id="@+id/et_postal_code"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/form_postal_code"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
-                <!--</android.support.design.widget.TextInputLayout>-->
-            <!--</LinearLayout>-->
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
 
-        <!--</android.support.v7.widget.CardView>-->
+        </android.support.v7.widget.CardView>
 
-        <!--<android.support.v7.widget.CardView-->
-                <!--app:cardElevation="4dp"-->
-                <!--android:layout_marginLeft="@dimen/spacing_small"-->
-                <!--android:layout_marginRight="@dimen/spacing_small"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content">-->
+        <android.support.v7.widget.CardView
+                app:cardElevation="4dp"
+                android:layout_marginLeft="@dimen/spacing_small"
+                android:layout_marginRight="@dimen/spacing_small"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <!--<android.support.design.widget.TextInputLayout-->
-                    <!--android:padding="@dimen/spacing_normal"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content">-->
+            <android.support.design.widget.TextInputLayout
+                    android:padding="@dimen/spacing_normal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <!--<android.support.design.widget.TextInputEditText-->
-                        <!--android:id="@+id/et_phone"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:hint="@string/form_phone"-->
-                        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>-->
+                <android.support.design.widget.TextInputEditText
+                        android:id="@+id/et_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/form_phone"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
-            <!--</android.support.design.widget.TextInputLayout>-->
+            </android.support.design.widget.TextInputLayout>
 
-        <!--</android.support.v7.widget.CardView>-->
+        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
                 app:cardElevation="4dp"
@@ -158,11 +158,11 @@
                         android:hint="@string/form_location"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
-                <!--<TextView-->
-                        <!--android:layout_marginTop="@dimen/spacing_small"-->
-                        <!--android:text="@string/attention_location"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"/>-->
+                <TextView
+                        android:layout_marginTop="@dimen/spacing_small"
+                        android:text="@string/attention_location"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
 
             </LinearLayout>
 
